Fixes hidden toolbars on ios

--- a/app/design/frontend/Scottsbase/scottsprogram-v2/web/css/source/_quiz.scss
+++ b/app/design/frontend/Scottsbase/scottsprogram-v2/web/css/source/_quiz.scss
@@ -1,5 +1,5 @@
 .sp-quiz {
-  height: calc(100vh - #{$header-height});
+	height: calc(100% - #{$header-height});
 }
 
 .yourplan-options-index {
